xmobar/xmobar-dual.errors

xmobar-dual.hs:53:37: error:
    lexical error in string/character literal at character '\61614'
   |
53 |         Run MultiCpu [ "-t", "<fn=2></fn>:<total>"
   |                                     ^
